[gd_scene load_steps=19 format=2]

[ext_resource path="res://script/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprite/stuff.png" type="Texture" id=2]
[ext_resource path="res://scene/ammo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound/sfx_deathscream_human2.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 6.0

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 5, 8 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/die/node = SubResource( 6 )
states/die/position = Vector2( 172, 165 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 70, 34 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 219, 44 )
transitions = [ "idle", "run", SubResource( 9 ), "run", "idle", SubResource( 10 ), "idle", "die", SubResource( 11 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
Ammo = ExtResource( 3 )
Bullet = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 35

[node name="head" type="Sprite" parent="sprite"]
visible = false
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 42

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="area2d" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 4

[node name="area_collision" type="CollisionShape2D" parent="area2d"]
visible = false
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="animtree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../animation")
active = true
parameters/playback = SubResource( 13 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.9

[node name="dir_timer" type="Timer" parent="."]

[node name="pos" type="Position2D" parent="."]
position = Vector2( 7, 3 )

[node name="atention" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 22

[node name="raycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 150, 0 )
__meta__ = {
"_editor_description_": "ok!"
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.3, 0.8 )

[node name="die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "audio"

[node name="rebirth" type="Timer" parent="."]
wait_time = 80.0
[connection signal="area_entered" from="area2d" to="." method="_on_area2d_area_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dir_timer" to="." method="_on_dir_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="rebirth" to="." method="_on_rebirth_timeout"]
